# nodetool-apple

./: .gitignore  README.md  pyproject.toml
.github/workflows/: integration-tests-macos.yml  tests.yml
src/nodetool/dsl/apple/: calendar.py  clipboard.py  contacts.py  dictionary.py  finder.py  mail.py  messages.py  music.py  network.py  notes.py  notifications.py  photos.py  reminders.py  safari.py  screen.py  shortcuts.py  speech.py  spotlight.py  system.py  text_services.py  vision.py  window_management.py
src/nodetool/examples/nodetool-apple/: Contacts Lookup.json  Index Apple Notes.json  Language Lesson.json  OCR Screenshot To Clipboard.json  Safari Summarizer.json  Speech To Note.json  Spotlight File Search.json
src/nodetool/nodes/apple/: __init__.py  calendar.py  clipboard.py  contacts.py  dictionary.py  finder.py  mail.py  messages.py  music.py  network.py  notes.py  notifications.py  photos.py  reminders.py  safari.py  screen.py  shortcuts.py  speech.py  spotlight.py  system.py  text_services.py  vision.py  window_management.py
src/nodetool/package_metadata/: nodetool-apple.json
tests/: conftest.py  test_escape_for_applescript.py  test_new_nodes.py  test_nodes_cacheable.py  test_shortcuts_node.py  test_window_management_nodes.py
tests/integration/: README.md  __init__.py  test_clipboard_integration.py  test_dictionary_integration.py  test_screen_integration.py  test_shortcuts_integration.py  test_speech_integration.py  test_spotlight_integration.py
