[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodetool-apple"
version = "0.6.2-rc.10"
description = "Nodetool Apple nodes"
readme = "README.md"
authors = [{ name = "Matthias Georgi", email = "matti.georgi@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
    "nodetool-core==0.6.2-rc.10",
    # macOS specific
    "pyobjc-core==11.0.0; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa==11.0.0; sys_platform == 'darwin'",
    "pyobjc-framework-EventKit==11.0.0; sys_platform == 'darwin'",
    "pyobjc-framework-CoreServices==11.0.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz==11.0.0; sys_platform == 'darwin'",
]


[project.optional-dependencies]
# For exact version pinning in production
stable = ["nodetool-core==0.6.2-rc.10"]

[tool.hatch.metadata]

[tool.hatch.build.targets.wheel]
packages = ["src/nodetool"]
artifacts = ["src/nodetool/package_metadata/nodetool-apple.json", "package_metadata/nodetool-apple.json", "assets/nodetool-apple/Language Lesson.png", "assets/nodetool-apple/Speech To Note.png"]

[tool.ruff]
[tool.ruff.lint]
extend-ignore = ["F401", "F841"]
