[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodetool-apple"
version = "0.6.3-rc.35"
description = "Nodetool Apple nodes"
readme = "README.md"
authors = [{ name = "Matthias Georgi", email = "matti.georgi@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
    "nodetool-core==0.6.3-rc.35",
    # macOS specific
    "pyobjc-core==11.0.0; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa==11.0.0; sys_platform == 'darwin'",
    "pyobjc-framework-Contacts==11.0.0; sys_platform == 'darwin'",
    "pyobjc-framework-EventKit==11.0.0; sys_platform == 'darwin'",
    "pyobjc-framework-CoreServices==11.0.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz==11.0.0; sys_platform == 'darwin'",
    "pyobjc-framework-Vision==11.0.0; sys_platform == 'darwin'",
]


[project.optional-dependencies]
# For exact version pinning in production
stable = ["nodetool-core==0.6.3-rc.35"]

[tool.hatch.metadata]

[tool.hatch.build.targets.wheel]
packages = ["src/nodetool"]
include = [
    "src/nodetool/package_metadata/*.json",
    "src/nodetool/assets/**/*.jpg",
    "src/nodetool/assets/**/*.png",
]

[tool.ruff]
extend-exclude = ["src/nodetool/dsl"]
[tool.ruff.lint]
extend-ignore = ["F401", "F841"]
